<resources>
    <string name="app_name">Practicum Project</string>
    <string name="playlist_maker" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="tema" translatable="false">Темная тема</string>
    <string name="send_app" translatable="false">Поделиться приложением</string>
    <string name="help" translatable="false">Написать в поддержку</string>
    <string name="sogl" translatable="false">Пользовательское соглашение</string>
    <string name="practicum_offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicum_share_url" translatable="false">"Привет! Я прохожу крутой курс по Android-разработке в Практикуме. Присоединяйся по ссылке: https://practicum.yandex.ru/android-developer/"</string>
    <string name="support_email" translatable="false">nunu.27@mail.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_results" translatable="false">Ничего не нашлось</string>
    <string name="no_internet" translatable="false">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="clear_button_searchHistory" translatable="false">Очистить историю</string>
    <string name="text_searchHistory" translatable="false">Вы искали</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="year" translatable="false">Год</string>
    <string name="Genre" translatable="false">Жанр</string>
    <string name="Country" translatable="false">Страна</string>
    <string name="Duration">Длительность</string>
    <string name="media_playlist_zaglushka">Вы не создали\nни одного плейлиста</string>
    <string name="media_favorite_zaglushka">Ваша медиатека пуста</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="new_playlist">Новый плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Create">Создать</string>
    <string name="disctiption">Описание</string>
    <string name="naming">Название*</string>
    <string name="discard_changes_title">\Завершить создание плейлиста?\</string>
    <string name="discard_changes_message">\Все несохраненные данные будут потеряны\</string>
    <string name="discard">\Завершить\</string>
    <string name="cancel">\Отмена\</string>
    <string name="text_u_dont_create">Вы не создали\nни одного плейлиста</string>
    <string name="ur_media_empty">Ваша медиа пуста</string>
    <string name="share">Поделится</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delit_playlist">Удалить плейлист</string>
    <string name="none_track">Тероков нету, но ты ищи</string>
</resources>