<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_white_black">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleStyle"
        app:titleMarginStart="0dp"
        />

    <!-- Темная тема -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitchMaterialInSetting"
        android:layout_marginTop="24dp"
        android:text="@string/tema" />

    <!-- Поделиться приложением -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareAppOption"
        style="@style/MaterialTextViewInSetting"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/send_app" />

    <!-- Написать в поддержку -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/helpOption"
        style="@style/MaterialTextViewInSetting"
        android:drawableEnd="@drawable/ic_help"
        android:text="@string/help"
        />

    <!-- Пользовательское соглашение -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreementOption"
        style="@style/MaterialTextViewInSetting"
        android:drawableEnd="@drawable/ic_sogl"
        android:text="@string/sogl" />

</LinearLayout>
