<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_practicum"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/search_button_main"
        style="@style/Btn_MainActivity_Style"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
         />

    <Button
        android:id="@+id/media_button_main"
        style="@style/Btn_MainActivity_Style"
        android:layout_marginTop="@dimen/padding_16dp"
        android:text="@string/library"
        app:icon="@drawable/ic_media"
        />

    <Button
        android:id="@+id/setting_button_main"
        style="@style/Btn_MainActivity_Style"
        android:layout_marginTop="@dimen/padding_16dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        />
</LinearLayout>