<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E8EB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.InfoPlaylist">
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/black_practicum_static"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgView" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black_practicum_static"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/minCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black_practicum_static"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ImageView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_black_point"
            app:layout_constraintBottom_toBottomOf="@+id/minCount"
            app:layout_constraintStart_toEndOf="@+id/minCount"
            app:layout_constraintTop_toTopOf="@+id/minCount" />

        <TextView
            android:id="@+id/trackCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="98 терков"
            android:textColor="@color/black_practicum_static"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/point"
            app:layout_constraintStart_toEndOf="@+id/point"
            app:layout_constraintTop_toTopOf="@+id/point" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_black_share"
            app:layout_constraintStart_toStartOf="@+id/minCount"
            app:layout_constraintTop_toBottomOf="@+id/minCount" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_three_point_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/share"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toTopOf="@+id/share" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_botomsheet"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">




        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_palka" />

        <LinearLayout
            android:id="@+id/placeholder"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nothingfind" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_track"
                android:textSize="18sp"
                android:textColor="@color/text_black_white"
                android:fontFamily="@font/ys_display_regular"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>


    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_botomsheet"
        android:orientation="vertical"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_palka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <ImageView
                android:id="@+id/img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/namePlaylist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:maxLines="1"
                android:textColor="@color/text_black_white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trackCount1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/b_grey_white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toBottomOf="@id/namePlaylist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/share_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="22dp"
            android:paddingTop="22dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share"
            android:textColor="@color/text_black_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        </TextView>

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:text="@string/edit_info"
            android:textColor="@color/text_black_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_sheet">

        </TextView>

        <TextView
            android:id="@+id/delet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:text="@string/delit_playlist"
            android:textColor="@color/text_black_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit">

        </TextView>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>